# batterylib

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: batterylib.py
src/batterylib/: __init__.py  algorithms.py  cli.py  models.py
tests/: test_batterylib.py  test_infra.py
tests/__snapshots__/: test_batterylib.ambr
