[project]
name = "batterylib"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["rich"]

[project.scripts]
batterylib = "batterylib.cli:main"
batterylib-old = "batterylib.cli:old_main"

[dependency-groups]
dev = [
    "pytest>=8",
    "syrupy>=4",
    "pytest-xdist>=3",
    "pytest-cov>=5",
    "prek>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-n auto"
